--- a/VinilosApp/app/build.gradle
+++ b/VinilosApp/app/build.gradle
@@ -58,9 +58,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'com.android.volley:volley:1.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.+'
 }
