--- a/VinilosApp/app/build.gradle
+++ b/VinilosApp/app/build.gradle
@@ -34,7 +34,8 @@ android {
         useIR = true
     }
     buildFeatures {
-        compose true
+        viewBinding true
+        dataBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
@@ -59,6 +60,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
