--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.+'
     androidTestImplementation 'androidx.test:rules:1.4.1-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha03'
 }
